; ModuleID = '/home/carl/AnghaBench/scrcpy/app/src/extr_video_buffer.c_video_buffer_interrupt.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/src/extr_video_buffer.c_video_buffer_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.video_buffer = type { i32, i32, i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @video_buffer_interrupt(%struct.video_buffer* %0) #0 {
  %2 = alloca %struct.video_buffer*, align 8
  store %struct.video_buffer* %0, %struct.video_buffer** %2, align 8
  %3 = load %struct.video_buffer*, %struct.video_buffer** %2, align 8
  %4 = getelementptr inbounds %struct.video_buffer, %struct.video_buffer* %3, i32 0, i32 3
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %22

7:                                                ; preds = %1
  %8 = load %struct.video_buffer*, %struct.video_buffer** %2, align 8
  %9 = getelementptr inbounds %struct.video_buffer, %struct.video_buffer* %8, i32 0, i32 2
  %10 = load i32, i32* %9, align 8
  %11 = call i32 @mutex_lock(i32 %10)
  %12 = load %struct.video_buffer*, %struct.video_buffer** %2, align 8
  %13 = getelementptr inbounds %struct.video_buffer, %struct.video_buffer* %12, i32 0, i32 0
  store i32 1, i32* %13, align 8
  %14 = load %struct.video_buffer*, %struct.video_buffer** %2, align 8
  %15 = getelementptr inbounds %struct.video_buffer, %struct.video_buffer* %14, i32 0, i32 2
  %16 = load i32, i32* %15, align 8
  %17 = call i32 @mutex_unlock(i32 %16)
  %18 = load %struct.video_buffer*, %struct.video_buffer** %2, align 8
  %19 = getelementptr inbounds %struct.video_buffer, %struct.video_buffer* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @cond_signal(i32 %20)
  br label %22

22:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @mutex_lock(i32) #1

declare dso_local i32 @mutex_unlock(i32) #1

declare dso_local i32 @cond_signal(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
